@@ -13,5 +13,5 @@ var_dump(date("r", $t));
 echo "OK\n";
 ?>
 --EXPECT--
-string(36) "Fri, 01 Jan 219250468 00:00:00 -0500"
+string(39) "Fri, 01 Jan 292277026596 00:00:00 -0500"
 OK
